commit John milestone add sale sysyem with pricee